--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!--header-->
     <div class="header">
       <div class="container">
-        <a href="index-main.html">
+        <a href="index.html">
           <img class="item logo" src="style/img/jojo.png" alt="logo"
         /></a>
       </div>
