--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
   </head>
   <body>
-    <!--header-->
+    <!--?header-->
     <div class="header">
       <div class="container">
         <a href="index.html">
@@ -26,21 +26,20 @@
         <a href="#" class="nav nav-bout">About</a>
       </div>
     </div>
-    <!--main-screen-->
+    <!--?main-screen-->
     <section class="home">
       <div class="content">
         <h2>Welcome to <span>LineBreaker</span></h2>
-        <h4>Personal Portfolio</h4>
+        <h3>Personal Portfolio</h3>
         <p>
-          Personal portfolio to post all kind of work I do such as music,
-          design, webdevelopment, codes in python, c# javascript and etc.
+          portfolio to post all kind of work I do such as music, design,
+          webdevelopment, codes in python, c# javascript and etc.
           <br /><br />
           I hope whoever is reading could know me better with this site.
         </p>
-        <img src="s/img/myle.gif" alt="" />
       </div>
     </section>
-    <!--articles-->
+    <!--?articles-->
     <section class="feature">
       <div class="contentft">
         <h1 class="heading">Articles</h1>
@@ -55,9 +54,11 @@
           </button>
         </a>
       </div>
-      <div class="img-ft"></div>
+      <div class="content-img">
+        <img src="/style/img/mario.gif" alt="" />
+      </div>
     </section>
-    <!--Design-->
+    <!--?Design-->
     <section class="design">
       <h1 class="heading">Design</h1>
       <p>
@@ -65,24 +66,22 @@
         to do art in general changed as my taste for this changed too.
         <br /><br />
       </p>
-      <div class="container-2">
-        <div class="serviceBx">
-          <div class="serviceBx1">
-            <img src="style/img/444.png" />
-            <h2>Typography</h2>
-          </div>
-          <div class="serviceBx1">
-            <img src="style/img/213.png" />
-            <h2>Album cover</h2>
-          </div>
-          <div class="serviceBx1">
-            <img src="style/img/21.png" />
-            <h2>Design</h2>
-          </div>
+      <div class="serviceBx">
+        <div class="serviceBx1">
+          <img src="style/img/444.png" />
+          <h2>Typography</h2>
+        </div>
+        <div class="serviceBx1">
+          <img src="style/img/213.png" />
+          <h2>Album cover</h2>
+        </div>
+        <div class="serviceBx1">
+          <img src="style/img/21.png" />
+          <h2>Design</h2>
         </div>
       </div>
     </section>
-    <!--Music-->
+    <!--?Music-->
     <section class="music">
       <div class="content-msc">
         <h2 class="heading">Music</h2>
@@ -99,14 +98,14 @@
       <div class="image-msc">
         <img src="style/img/capa.png" />
       </div>
-      <div class="social">
+      <!-- <div class="social">
         <img src="" />
         <img src="" />
         <img src="" />
         <img src="" />
-      </div>
+      </div> -->
     </section>
-    <!--About-->
+    <!--?About-->
     <section>
       <div class="about"></div>
     </section>
