--- a/index-articles.html
+++ b/index-articles.html
@@ -20,7 +20,7 @@
     </div>
     <div class="header">
       <div class="container">
-        <a href="index-main.html">
+        <a href="index.html">
           <img class="item logo" src="style/img/jojo.png" alt="logo"
         /></a>
       </div>
