--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       <div class="nav-right">
         <a href="index-articles.html" class="nav n av-art">Articles</a>
         <a href="#" class="nav nav-shop">Designs</a>
-        <a href="#" class="nav nav-des">Music</a>
+        <a href="music.html" class="nav nav-des">Music</a>
         <a href="#" class="nav nav-bout">About</a>
       </div>
     </div>
@@ -98,12 +98,6 @@
       <div class="image-msc">
         <img src="style/img/capa.png" />
       </div>
-      <!-- <div class="social">
-        <img src="" />
-        <img src="" />
-        <img src="" />
-        <img src="" />
-      </div> -->
     </section>
     <!--?About-->
     <section>
