--- a/index-articles.html
+++ b/index-articles.html
@@ -27,7 +27,7 @@
       <div class="nav-right">
         <a href="#" class="nav nav-art">Articles</a>
         <a href="#" class="nav nav-shop">Shop</a>
-        <a href="#" class="nav nav-des">Designs</a>
+        <a href="#" class="nav nav-des">Music</a>
         <a href="#" class="nav nav-bout">About</a>
       </div>
     </div>
