--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
           <h2>Typography</h2>
         </div>
         <div class="serviceBx1">
-          <img src="style/img/213.png" />
+          <img src="style/img/capa_3.png" />
           <h2>Album cover</h2>
         </div>
         <div class="serviceBx1">
-          <img src="style/img/21.png" />
+          <img src="style/img/capa_7.jpg" />
           <h2>Design</h2>
         </div>
       </div>
