--- a/music.html
+++ b/music.html
@@ -35,22 +35,22 @@
         </div>
         <div class="music__item">
           <img class="music__img" src="/style/img/capa_3.png" alt="" />
-          <p class="music__title">titulo</p>
+          <p class="music__title">Nunca Pare De Lutar</p>
           <p class="music__p">2022</p>
         </div>
         <div class="music__item">
           <img class="music__img" src="/style/img/capa.png" alt="" />
-          <p class="music__title">titulo</p>
-          <p class="music__p">2022</p>
+          <p class="music__title">Caçada Infinda Pelo Ápice Do Enlevo</p>
+          <p class="music__p">202?</p>
         </div>
         <div class="music__item">
           <img class="music__img" src="/style/img/capa_4.png" alt="" />
-          <p class="music__title">titulo</p>
-          <p class="music__p">2022</p>
+          <p class="music__title">5Th Generation<br />Nostalgia Injection</p>
+          <p class="music__p">2023</p>
         </div>
         <div class="music__item">
           <img class="music__img" src="/style/img/capa_5.jpg" alt="" />
-          <p class="music__title">titulo</p>
+          <p class="music__title">Stay If U Want To</p>
           <p class="music__p">2022</p>
         </div>
         <div class="music__item">
@@ -60,18 +60,18 @@
         </div>
         <div class="music__item">
           <img class="music__img" src="/style/img/capa_7.jpg" alt="" />
-          <p class="music__title">titulo</p>
+          <p class="music__title">Taiyakiii</p>
           <p class="music__p">2022</p>
         </div>
         <div class="music__item">
           <img class="music__img" src="/style/img/capa_8.png" alt="" />
-          <p class="music__title">titulo</p>
-          <p class="music__p">2022</p>
+          <p class="music__title">Alpen Field</p>
+          <p class="music__p">Lastest Realease</p>
         </div>
         <div class="music__item">
           <img class="music__img" src="/style/img/capa_9.jpg" alt="" />
-          <p class="music__title">titulo</p>
-          <p class="music__p">2022</p>
+          <p class="music__title">???</p>
+          <p class="music__p">???</p>
         </div>
       </div>
     </section>
