--- a/index.html
+++ b/index.html
@@ -5,103 +5,233 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="style/style2.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
-      rel="stylesheet"
-    />
+    <link rel="stylesheet" href="style.css" />
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
-    <!--?header-->
-    <div class="header">
-      <div class="container">
-        <a href="index.html">
-          <img class="item logo" src="style/img/jojo.png" alt="logo"
-        /></a>
-      </div>
-      <div class="nav-right">
-        <a href="index-articles.html" class="nav n av-art">Articles</a>
-        <a href="#" class="nav nav-shop">Designs</a>
-        <a href="music.html" class="nav nav-des">Music</a>
-        <a href="#" class="nav nav-bout">About</a>
-      </div>
-    </div>
-    <!--?main-screen-->
-    <section class="home">
-      <div class="content">
-        <h2>Welcome to <span>LineBreaker</span></h2>
-        <h3>Personal Portfolio</h3>
-        <p>
-          portfolio to post all kind of work I do such as music, design,
-          webdevelopment, codes in python, c# javascript and etc.
-          <br /><br />
-          I hope whoever is reading could know me better with this site.
+    <main>
+      <header class="header container">
+        <nav class="header__logo">
+          <h2 class="logo">EC</h2>
+        </nav>
+        <button class="header__bars">
+          <svg
+            class="svg"
+            xmlns="http://www.w3.org/2000/svg"
+            fill="none"
+            viewBox="0 0 24 24"
+            stroke-width="1.5"
+            stroke="currentColor"
+          >
+            <path
+              stroke-linecap="round"
+              stroke-linejoin="round"
+              d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5"
+            />
+          </svg>
+        </button>
+        <nav class="header__nav-left">
+          <li>
+            <a class="header__link" href="#">Home</a>
+          </li>
+          <li>
+            <a class="header__link" href="#">Services</a>
+          </li>
+          <li>
+            <a class="header__link" href="#">Contact</a>
+          </li>
+          <li>
+            <a class="header__link" href="#">About</a>
+          </li>
+        </nav>
+      </header>
+      <!-- TODO  -->
+      <section class="intro section container">
+        <h2 class="intro__subtitle">Hello 👋, I'm Erik Carvalho</h2>
+        <h1 class="intro__title">Full Stack Developer.</h1>
+        <p class="intro__description">
+          Specialized in building <span>beautiful</span> and
+          <strong>clean</strong> websites for customers.
         </p>
-      </div>
-    </section>
-    <!--?articles-->
-    <section class="feature">
-      <div class="contentft">
-        <h1 class="heading">Articles</h1>
-        <p>
-          This is where i post about my passions and things that i want to talk
-          about or just remind old times, also what my friends like about games,
-          art, opinions and etc...
-        </p>
-        <a href="index-articles.html">
-          <button class="btn" href="index-articles.html" type="button">
-            Go to
-          </button>
-        </a>
-      </div>
-      <div class="content-img">
-        <img src="/style/img/mario.gif" alt="" />
-      </div>
-    </section>
-    <!--?Design-->
-    <section class="design">
-      <h1 class="heading">Design</h1>
-      <p>
-        I make art since 2016, that's all my designs through the years, my way
-        to do art in general changed as my taste for this changed too.
-        <br /><br />
-      </p>
-      <div class="serviceBx">
-        <div class="serviceBx1">
-          <img src="style/img/444.png" />
-          <h2>Typography</h2>
+        <button class="btn intro__button">Reach out</button>
+      </section>
+      <!-- !work -->
+      <section class="about section container">
+        <header class="about__header">
+          <ul class="about__left">
+            <h2 class="about__title">Portfolio</h2>
+            <p class="about__description">Done Jobs And Projects</p>
+          </ul>
+          <ul class="about__right">
+            <a class="about__btn" href="">All Work</a>
+            <a class="about__btn" href="">Personal Projects</a>
+            <a class="about__btn" href="">Professional Projects</a>
+          </ul>
+        </header>
+        <div class="about__grid">
+          <div class="about__box">
+            <div class="about__item"></div>
+            <p>Lorem Ipsum</p>
+          </div>
+          <div class="about__box">
+            <div class="about__item"></div>
+            <p>Lorem Ipsum</p>
+          </div>
+          <div class="about__box">
+            <div class="about__item"></div>
+            <p>Lorem Ipsum</p>
+          </div>
+          <div class="about__box">
+            <div class="about__item"></div>
+            <p>Lorem Ipsum</p>
+          </div>
+          <div class="about__box">
+            <div class="about__item"></div>
+            <p>Lorem Ipsum</p>
+          </div>
+          <div class="about__box">
+            <div class="about__item"></div>
+            <p>Lorem Ipsum</p>
+          </div>
         </div>
-        <div class="serviceBx1">
-          <img src="style/img/capa_3.png" />
-          <h2>Album cover</h2>
+      </section>
+      <!-- ! -->
+      <section class="skills section container" id="skills">
+        <ul class="section__header">
+          <h2 class="section__title">SKILLS</h2>
+          <p class="section__description">my technical level</p>
+        </ul>
+
+        <div class="skills__container">
+          <div> 
+            <!--TODO skills 1 -->
+            <div class="skills__content skills__close">
+                <div class="skills__header">
+                  <i class='bx bx-code-curly skills__icon'></i>
+                  <div>
+                      <h1 class="skills__titles">Front end Developer</h1>
+                      <p class="skills__subtitle">More Than 3 months</p>
+                  </div>
+                  <i class='bx bx-chevron-down skills__arrow' ></i>
+                </div>
+                <div class="skills__list">
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <div class="skills__box">
+                        <i class='bx bxl-html5 skills__iconnm'></i>
+                        <h3 class="skills__name">Html</h3>
+                      </div>
+                      <p class="skills__number">80%</p>
+                    </div>
+                    <div class="skills__bar">
+                      <span class="skills__percentage skills__html"></span>
+                    </div>
+                  </div>
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <div class="skills__box">
+                        <i class='bx bxl-css3 skills__iconnm'></i>
+                        <h3 class="skills__name">Css</h3>
+                      </div>
+                      <p class="skills__number">90%</p>
+                    </div>
+                    <div class="skills__bar">
+                      <span class="skills__percentage skills__css"></span>
+                    </div>
+                  </div>
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <div class="skills__box">
+                        <i class='bx bxl-javascript skills__iconnm' ></i>
+                        <h3 class="skills__name">JavaScript</h3>
+                      </div>
+                      <p class="skills__number">30%</p>
+                    </div>
+                    <div class="skills__bar">
+                      <span class="skills__percentage skills__js"></span>
+                    </div>
+                  </div>
+                  <div class="skills__data">
+                    <div class="skills__titles">
+                      <div class="skills__box">
+                        <i class='bx bxl-react skills__iconnm' ></i>
+                        <h3 class="skills__name">React</h3>
+                      </div>
+                      <p class="skills__number">1%</p>
+                    </div>
+                    <div class="skills__bar">
+                      <span class="skills__percentage skills__react "></span>
+                    </div>
+                  </div>
+                </div>
+            </div>
+            <!--TODO skills2  -->
+            <div class="skills__content skills__close">
+              <div class="skills__header">
+                <i class='bx bxs-data skills__icon'></i>
+                <div>
+                    <h1 class="skills__titles">Back End Developer</h1>
+                    <p class="skills__subtitle">More Than 3 months</p>
+                </div>
+                <i class='bx bx-chevron-down skills__arrow' ></i>
+              </div>
+              <div class="skills__list">
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <div class="skills__box">
+                      <i class='bx bxl-python skills__iconnm' ></i>
+                      <h3 class="skills__name">Python</h3>
+                    </div>
+                    <p class="skills__number">75%</p>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__python"></span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <div class="skills__box">
+                      <i class='bx bxl-c-plus-plus skills__iconnm' ></i>
+                      <h3 class="skills__name">C#</h3>
+                    </div>
+                    <p class="skills__number">50%</p>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__c"></span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <div class="skills__box">
+                      <i class='bx bxl-nodejs skills__iconnm' ></i>
+                      <h3 class="skills__name">Node.Js</h3>
+                    </div>
+                    <p class="skills__number">10%</p>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__node"></span>
+                  </div>
+                </div>
+                <div class="skills__data">
+                  <div class="skills__titles">
+                    <div class="skills__box">
+                      <i class='bx bxl-php skills__iconnm'></i>
+                      <h3 class="skills__name">PHP</h3>
+                    </div>
+                    <p class="skills__number">5%</p>
+                  </div>
+                  <div class="skills__bar">
+                    <span class="skills__percentage skills__php"></span>
+                  </div>
+                </div>
+              </div>
+          </div>
         </div>
-        <div class="serviceBx1">
-          <img src="style/img/capa_7.jpg" />
-          <h2>Design</h2>
-        </div>
-      </div>
-    </section>
-    <!--?Music-->
-    <section class="music">
-      <div class="content-msc">
-        <h2 class="heading">Music</h2>
-        <p>
-          I frequently express myself through music, I started making music in
-          my highschool and since then I keep improve my musics and post to many
-          plataforms and groups. <br /><br />
-          Started post in Spotify and other plataform as Soundcloud and youtube,
-          doing remixes and authorial music I enjoy making music to myself and
-          share to the world.
-        </p>
-        <button class="btn" type="button">Go to</button>
-      </div>
-      <div class="image-msc">
-        <img src="style/img/capa.png" />
-      </div>
-    </section>
-    <!--?About-->
-    <section>
-      <div class="about"></div>
-    </section>
+      </section>
+      <section></section>
+      <section></section>
+      <footer></footer>
+    </main>
+    <script src="main.js"></script>
   </body>
 </html>
