--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
       <section class="about section container">
         <header class="about__header">
           <ul class="about__left">
-            <h2 class="about__title">Portfolio</h2>
-            <p class="about__description">Done Jobs And Projects</p>
+            <h2 class="section__title">Portfolio</h2>
+            <p class="section__description">Done Jobs And Projects</p>
           </ul>
           <ul class="about__right">
             <a class="about__btn" href="">All Work</a>
@@ -103,7 +103,7 @@
         </ul>
 
         <div class="skills__container">
-          <div> 
+          <div class="test"> 
             <!--TODO skills 1 -->
             <div class="skills__content skills__close">
                 <div class="skills__header">
@@ -228,7 +228,29 @@
           </div>
         </div>
       </section>
-      <section></section>
+      <section class="contact section container">
+        <header class="section__header">
+          <h2 class="section__title">CONTACT ME</h2>
+          <p class="section__description">Whether you are starting a project, have business inquiries or just want to say hi, my inbox is always open so feel free to reach out and I will get back to you as soon as possible. </p>
+        </header>
+        <div class="contact__content">
+          <div class="contact__box">
+            <i class='bx bxl-github contact__icon'></i>
+            <!-- <p class="section__description">lorem</p> -->
+            <button class="btn">Reach me</button>
+          </div>
+          <div class="contact__box">
+            <i class='bx bxl-linkedin contact__icon' ></i>
+            <!-- <p class="section__description">lorem</p> -->
+            <button class="btn">Reach me</button>
+          </div>
+          <div class="contact__box">
+            <i class='bx bxl-behance contact__icon' ></i>
+            <!-- <p class="section__description">lorem</p> -->
+            <button class="btn">Reach me</button>
+          </div>
+        </div>
+      </section>
       <section></section>
       <footer></footer>
     </main>
