--- a/index.html
+++ b/index.html
@@ -50,12 +50,38 @@
         <h2 class="intro__subtitle">Hello 👋, I'm Erik Carvalho</h2>
         <h1 class="intro__title">Full Stack Developer.</h1>
         <p class="intro__description">
-          Specialized in building <span>beautiful</span> and
-          <strong>clean</strong> websites for customers.
+          Desenvolvedor Full-Stack Especializado em <strong>Python, Html e Css.</strong>
+
         </p>
         <button class="btn intro__button">Reach out</button>
       </section>
-      <!-- !work -->
+      <!-- ?about -->
+      <section class="dk section container">
+        <header class="section__header">
+          <h2 class="intro__title">ABOUT ME</h2>
+        </header>
+        <div class="dk__content">
+          <ul class="dk__box">
+            <img class="dk__img" src="./public/4dc34007-5ff3-4474-8fcf-aec2cf8b6fa4.jpg" alt="">
+          </ul>
+            <ul class="dk__dk">
+              <h2 class="section__title">Sobre Mim</h2>
+              <p class="section__description">Meu nome é Erik Nunes de Carvalho,
+                Atualmente estudante de programação e desenvolvimento web, apaixonado em desenvolvimento <strong>back-end </strong> e <strong>front-end.</strong>
+                <br>
+                <br>
+                Comecei a programar com o <strong>Python</strong> e logo depois aprendi
+                <strong>C#, HTML, CSS e JavaScript.</strong><br>
+                Atualmente estou estudando <strong>React e NodeJS.</strong>
+                <ul class="dk__btn">
+                  <a href="#">Download CV</a>
+                  <i class='bx bx-download cv__icon'></i>
+                </ul>
+            </ul>
+        </div>
+
+      </section>
+      <!-- !work-->
       <section class="about section container">
         <header class="about__header">
           <ul class="about__left">
